Implement dynamic database connection utility for development and production environments

--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,19 @@
-SOCCER_API_KEY=
-DB_HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_PORT=
+
+# --- API KEYS ---
+SOCCER_API_KEY=tu_api_key_aqui
+
+# --- CONFIGURACIÓN GENERAL ---
+ENVIRONMENT=dev
+
+# --- BASE DE DATOS LOCAL (DOCKER) ---
+DB_HOST=db
+DB_NAME=river_plate_db
+DB_USER=postgres
+DB_PASSWORD=admin123
+DB_PORT=5432
+
+# --- BASE DE DATOS PRODUCCIÓN (SUPABASE) ---
+SUPABASE_HOST=aws-0-us-west-1.pooler.supabase.com
+SUPABASE_USER=postgres.[project-ref]
+SUPABASE_PASSWORD=[db-password]
+SUPABASE_PORT=6543
